# Projeto_INOA

./: README.md
Projeto_INOA/: CMakeLists.txt  README.md  comandos.txt  config.txt  main.cpp
